# generative-ai-internship-assignment

./: .env.example  .gitignore  README.md  courseforge_production_seed.sql  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  check.py  check_models.py  create_user.py  debug_db.py  fix_ownership.py  insert_user.py  pyproject.toml  requirements.txt  test_api.py
backend/alembic/: env.py
backend/alembic/versions/: 2ef9271cf9a8_add_chat_sessions.py
backend/app/: cli.py  config.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/api/routes/: auth.py  chat.py  courses.py  documents.py  lessons.py  pipeline.py  progress.py  search.py  upload.py  users.py
backend/app/database/: __init__.py  init_db.py  session.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py  auth.py  chat.py  course.py  user.py
backend/app/services/: __init__.py  course_service.py  oauth_service.py  orchestrator.py  pdf_service.py  queries.py  user_service.py
backend/app/services/agents/: __init__.py  chat_agent.py  lesson_agent.py  llm_client.py  mega_agent.py  quiz_agent.py  review_agent.py  story_agent.py  structure_agent.py
backend/app/utils/: deps.py  jwt_utils.py  security.py
frontend/: .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: login-form.tsx  signup-form.tsx  theme-toggle.tsx
frontend/src/lib/: api.ts  config.ts  utils.ts
frontend/src/types/: index.ts
(+44 files in other folders)
