[project]
name = "courseforge-backend"
version = "0.1.0"
description = "FastAPI backend for the CourseForge AI PDF to E-Course learning platform."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "email-validator>=2.2.0",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.1.18",
    "alembic>=1.13.2",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.3",
    "PyJWT>=2.9.0",
    "httpx>=0.27.0",
    "PyMuPDF>=1.24.7",
    "python-multipart>=0.0.9",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]
